fixed checkout delivery state check and shop by brands products fetch

--- a/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
@@ -6,7 +6,7 @@
     @if (Model.ShippingRules == null || Model.ShippingRules.Count() <= 0)
     {
         <br />
-        <div class="checkboxwrap">We are not able to ship the orders to the selected address, please select a different Sgipping address.</div>
+        <div class="checkboxwrap">We are not able to ship the orders to the selected address, please select a different address.</div>
     }
     else
     {
