--- a/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
@@ -30,24 +30,24 @@
         <div class="row" id="address__input-box">
             <div class="col-lg-6">
                 <div class="form-group">
-                    @Html.EditorFor(model => model.AccountAddress.AddressLine1, new { htmlattributes = new { @placeholder = "Address Line 1", @class = "AddressLine1", @required = "Required", @oninput = "validateForm()" } })
+                    @Html.EditorFor(model => model.AccountAddress.AddressLine1, new { htmlattributes = new { @placeholder = "Address Line 1", @class = "AddressLine1", @required = "Required", @oninput = "validateAddressForm()" } })
                 </div>
                 <div class="form-group">
-                    @Html.EditorFor(model => model.AccountAddress.AddressLine2, new { htmlattributes = new { @placeholder = "Address Line 2", @class = "AddressLine2", @required = "Required", @oninput = "validateForm()" } })
+                    @Html.EditorFor(model => model.AccountAddress.AddressLine2, new { htmlattributes = new { @placeholder = "Address Line 2", @class = "AddressLine2", @required = "Required", @oninput = "validateAddressForm()" } })
                 </div>
                 <div class="form-group">
-                    @Html.EditorFor(model => model.AccountAddress.AddressLine3, new { htmlattributes = new { @placeholder = "Address Line 3", @class = "AddressLine3", @required = "Required", @oninput = "validateForm()" } })
+                    @Html.EditorFor(model => model.AccountAddress.AddressLine3, new { htmlattributes = new { @placeholder = "Address Line 3", @class = "AddressLine3", @required = "Required", @oninput = "validateAddressForm()" } })
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="form-group">
-                    @Html.EditorFor(model => model.AccountAddress.Telephone, new { htmlattributes = new { @placeholder = "Telephone Number", @class = "Telephone", @required = "Required", @oninput = "validateForm()" } })
+                    @Html.EditorFor(model => model.AccountAddress.Telephone, new { htmlattributes = new { @placeholder = "Telephone Number", @class = "Telephone", @required = "Required", @oninput = "validateAddressForm()" } })
                 </div>
                 <div class="form-group">
-                    @Html.DropDownListFor(model => model.AccountAddress.CountryID, new SelectList(Model.Countries, "CountryID", "CountryName"), new { @required = "Required", @oninput = "validateForm()" })
+                    @Html.DropDownListFor(model => model.AccountAddress.CountryID, new SelectList(Model.Countries, "CountryID", "CountryName"), new { @required = "Required", @oninput = "validateAddressForm()" })
                 </div>
                 <div class="form-group">
-                    @Html.EditorFor(model => model.AccountAddress.PostCode, new { htmlattributes = new { @placeholder = "Postal Code", @class = "PostCode", @required = "Required", @oninput = "validateForm()" } })
+                    @Html.EditorFor(model => model.AccountAddress.PostCode, new { htmlattributes = new { @placeholder = "Postal Code", @class = "PostCode", @required = "Required", @oninput = "validateAddressForm()" } })
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
 </div>
 
 <script>
-    function validateForm() {
+    function validateAddressForm() {
         if (!!$('#AccountAddress_AddressLine1').val() &&
             !!$('#AccountAddress_AddressLine2').val() &&
             !!$('#AccountAddress_AddressLine3').val() &&
@@ -87,5 +87,5 @@
         }
     };
 
-    validateForm();
+    validateAddressForm();
 </script>
