fixed brands links

--- a/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
@@ -64,7 +64,7 @@
                                                             <div>SKU: @kitProductMaster.SKUCode</div>
                                                             @if (kitProductMaster.ProductManufacturer != null)
                                                             {
-                                                                <div>Brand: <a href="@Url.Action("List", "Products", new { filters = "brands>" + kitProductMaster.ProductManufacturer.Name.Replace(" ", "_") })">@kitProductMaster.ProductManufacturer.Name</a></div>
+                                                                <div>Brand: <a href="@Url.Action("List", "Products", new { filters = "brands>" + kitProductMaster.ProductManufacturer.Name.Replace(" ", "_") + ":" + kitProductMaster.ManufacturerId })">@kitProductMaster.ProductManufacturer.Name</a></div>
                                                             }
                                                             @if (!string.IsNullOrEmpty(kitProductMaster.ManufacturerPartNo?.Trim()))
                                                             {
