--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -2431,8 +2431,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .nb_prod_bottomdes {
     width: 100%;
-    display: inline-block;
-    padding-top: 30px
+    display: inline-block
 }
 
     .nb_prod_bottomdes .head {
@@ -2449,7 +2448,8 @@ input[type=number]::-webkit-outer-spin-button {
         font-family: "primaryfont_Normal";
         font-size: 16px;
         line-height: 24px;
-        letter-spacing: 2px
+        letter-spacing: 2px;
+        text-align: justify
     }
 
 .nb_header_style2 {
@@ -6968,10 +6968,6 @@ body.modal-open {
         -ms-transition: unset !important;
         outline: 0 !important
     }
-
-.nb_prod_bottomdes .content {
-    white-space: pre-line
-}
 
 .search-item a,
 .srtby_txt {
