data import messages content corrected

--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -104,9 +104,10 @@
                 <h3>Products Attributes Import</h3>
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. </span>
                 <span class="clearfix" , style="text-align:justify">
-                    This should have the columns in the order of SkuCode<i style="color:red">*</i>, Attribute<i style="color:red">*</i>, Attribute Value<i style="color:red">*</i>
+                    This should have the columns in the order of SkuCode<i style="color:red">*</i>, Attribute<i style="color:red">*</i>, AttributeValue<i style="color:red">*</i>
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+                <span class="clearfix">Columns names are case sensetive. e.g. "SKUCode" is wrong and should be "SkuCode"</span>
             </div>
         </div>
 
@@ -120,6 +121,7 @@
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
                 <span class="clearfix">The rows with the empty value for "ParentHeading", "ChildHeading" and "SubChildHeading", will be just associated by website and not any categories.</span>
+                <span class="clearfix">Columns names are case sensetive. e.g. "SKUCode" is wrong and should be "SkuCode"</span>
             </div>
         </div>
 
@@ -131,6 +133,7 @@
                     This should have the columns in the order of ParentSkuCode<i style="color:red">*</i>, ChildSkuCode<i style="color:red">*</i>, AssociationType<i style="color:red">*</i>
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+                <span class="clearfix">Columns names are case sensetive. e.g. "ChildSKUCode" is wrong and should be "ChildSkuCode"</span>
             </div>
         </div>
     </div>
