--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1842,7 +1842,7 @@ input[type=number]::-webkit-outer-spin-button {
         text-transform: uppercase;
         letter-spacing: 4px;
         font-size: 15px;
-        border-bottom: solid 1px #000;
+        border-top: solid 1px #000;
         padding: 0 0 5px;
         border-radius: 0;
         margin-bottom: 0
