--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1959,7 +1959,7 @@ input[type=number]::-webkit-outer-spin-button {
         float: left;
         text-align: center;
         font-family: "primaryfont_Normal";
-        font-size: 20px;
+        font-size: 16px;
         max-height: 50px;
         color: #111
     }
@@ -6838,9 +6838,7 @@ body.modal-open {
 }
 
 .prd_lst_boxouter .prdName {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis
+    min-height: 36px;
 }
 
 .feature-product-overflow .owl-item,
