--- a/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
@@ -44,19 +44,15 @@
                     <div class="orderTotalsec">
                         @*<div>Order Total</div><br/>*@
                         <div>Order Total <p><span>@ViewBag.CurrencySymbol</span><span class="total-amount">@Model.TotalOrderAmount</span></p></div>
-
                     </div>
 
                     <div class="paymentTabsec">
                         <div class="myAccLeftNavsec">
                             <div class="row">
-                                <div class="col-lg-12 paypal-buttons">
+                                <div class="col-md-8 col-lg-6 col-xl-4 paypal-buttons">
                                 </div>
                             </div>
-
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -87,7 +83,7 @@
                         postal_code: '@billingAddress.PostCode',
                         country_code: '@billingAddress.GlobalCountry.CountryCode'
                     },
-                    email_address: "@Model.Email"
+                    email_address: "@(Model.Email ?? "guest@ganedata.co.uk")"
 
 
 
