--- a/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
@@ -61,7 +61,9 @@
                 <input type="hidden" name="AccountAddress.AddTypeBilling" id="AccountAddress.AddTypeBilling" value="true" />
             }
 
-            @Html.HiddenFor(model => model.AccountAddress.AccountID, (int)(Model.AccountId))
+            @if (Model.AccountAddress?.AccountID != null) {
+                @Html.HiddenFor(model => model.AccountAddress.AccountID, (int)(Model.AccountId))
+            }
         </div>
 
         <div class="saveAddrWrap">
