--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -287,7 +287,7 @@
                                         {
                                             <td class="delivery greyBox">
                                                 <div class="botomBtnsec in-table-button-section">
-                                                    <button class="btmbtn pro" onclick="@(Model.ShowLoginPopUp == true ? "GetLoggedIn('" + (bool?)Model.ShowLoginPopUp + "');" : "proceedToPickup();")">PROCEED TO PICKUP</button>
+                                                    <button class="btmbtn pro" onclick="proceedToPickup()">PROCEED TO PICKUP</button>
                                                 </div>
                                             </td>
                                         }
@@ -295,7 +295,7 @@
                                         {
                                             <td class="delivery greyBox">
                                                 <div class="botomBtnsec in-table-button-section">
-                                                    <button class="btmbtn pro" onclick="@(Model.ShowLoginPopUp == true ? "GetLoggedIn('" + (bool?)Model.ShowLoginPopUp + "');" : "proceedToDelivery();")">PROCEED TO DELIVERY</button>
+                                                    <button class="btmbtn pro" onclick="proceedToDelivery()">PROCEED TO DELIVERY</button>
                                                 </div>
                                             </td>
                                         }
@@ -314,7 +314,7 @@
                     {
                         if ((Model.IsCollectionAvailable || Model.IsDeliveryAvailable) && (Model.WebsiteCartItems != null && Model.WebsiteCartItems.Count != 0))
                         {
-                            <button class="btmbtn pro mobile-checkout" onclick="@(Model.ShowLoginPopUp == true ? "GetLoggedIn('" + (bool?)Model.ShowLoginPopUp + "');" : "proceedToMobileCheckout();")">PROCEED TO CHECKOUT</button>
+                            <button class="btmbtn pro mobile-checkout" onclick="proceedToMobileCheckout()">PROCEED TO CHECKOUT</button>
                         }
                         <a class="btmbtn sho" href="@Url.Action("list", "Products")">CONTINUE SHOPPING</a>
                     }
