added quick dispatch feature

--- a/WMS/Views/Theme/Default/Order/_DirectSalesOrders.cshtml
+++ b/WMS/Views/Theme/Default/Order/_DirectSalesOrders.cshtml
@@ -151,7 +151,7 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ConsignmentType";
+            c.FieldName = "DeliveryMethod";
             c.Caption = "Type";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
