--- a/WMS/Views/Theme/Default/Pallets/PalletEditor.cshtml
+++ b/WMS/Views/Theme/Default/Pallets/PalletEditor.cshtml
@@ -30,47 +30,50 @@
     @Html.AntiForgeryToken()
     @Html.Hidden("selkey", 10000)
     @Html.Hidden("orderprocessId", Model.SelectedOrderProcessId)
-    @Html.Hidden("dispatchId",(int?)Model.dispatchId)
-    @Html.Hidden("DeliveryRefrenceNumber",(Model.OrderProcesses==null?"":Model.OrderProcesses.DeliveryNO))
-<div class="col-md-12 p-0 pull-left report-date-header mb-1">
-    <div class="col-md-4 mt-1 pull-left">
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @if (Model.OrderProcesses != null)
-            {
-                <div class="col-md-12">
-                    <label><b>OrderNumber:</b> @Model.OrderProcesses.Order.OrderNumber  &nbsp;</label>
-                    <label><b>DeliverNo:</b> @Model.OrderProcesses.DeliveryNO</label><br />
-                </div>
-                <div class="col-md-12">
-                    <label><b>Account Name:</b> @Model.OrderProcesses.Order.Account.CompanyName &nbsp;</label>
-                    <label><b>Account Code:</b> @Model.OrderProcesses.Order.Account.AccountCode</label>
+    @Html.Hidden("dispatchId", (int?)Model.dispatchId)
+    @Html.Hidden("DeliveryRefrenceNumber", (Model.OrderProcesses == null ? "" : Model.OrderProcesses.DeliveryNO))
+    @Html.Hidden("OrderDeliveryMethod", (Model.OrderProcesses == null ? (int?)null : (int?)Model.OrderProcesses.Order.DeliveryMethod))
+    @Html.Hidden("OrderDeliveryNetworkCode", (Model.OrderProcesses == null || Model.OrderProcesses.Order.TenantDeliveryService == null ? "" : Model.OrderProcesses.Order.TenantDeliveryService.NetworkCode))
+    <div class="col-md-12 p-0 pull-left report-date-header mb-1">
+        <div class="col-md-4 mt-1 pull-left">
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @if (Model.OrderProcesses != null)
+                {
+                    <div class="col-md-12">
+                        <label><b>OrderNumber:</b> @Model.OrderProcesses.Order.OrderNumber  &nbsp;</label>
+                        <label><b>DeliverNo:</b> @Model.OrderProcesses.DeliveryNO</label><br />
+                    </div>
+                    <div class="col-md-12">
+                        <label><b>Account Name:</b> @Model.OrderProcesses.Order.Account.CompanyName &nbsp;</label>
+                        <label><b>Account Code:</b> @Model.OrderProcesses.Order.Account.AccountCode</label>
                     </div>
 
-                    }
+                }
 
-                </div>
-            </div>
-
-
-    <div class="col-md-4 mt-1 pull-left">
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.Label("Pallet", htmlAttributes: new { @class = "col-md-3" })
-            <div class="col-md-9">
-                @Html.DropDownListFor(m => m.SelectedPalletID, Model.AllCurrentPallets, new { @class = "chosen-select" })
             </div>
         </div>
-    </div>
 
-    <div class="col-md-4 pull-right">
-        <button type="button" class="btn btn-success col-md-12 pallet-editor-button fa fa-cart-plus" id="btnNewPallet"><span class="pl-2">Create New</span></button>
+
+        <div class="col-md-4 mt-1 pull-left">
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Pallet", htmlAttributes: new { @class = "col-md-3" })
+                <div class="col-md-9">
+                    @Html.DropDownListFor(m => m.SelectedPalletID, Model.AllCurrentPallets, new { @class = "chosen-select" })
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 pull-right">
+            <button type="button" class="btn btn-success col-md-12 pallet-editor-button fa fa-cart-plus" id="btnNewPallet"><span class="pl-2">Create New</span></button>
+        </div>
     </div>
-</div>
 
 }
 
 <div class="col-md-12 p-0 pull-left" style="display: none" id="divPalletGenerator"></div>
 <div class="col-md-12 pull-left">
     <div class="col-md-offset-2 col-md-10 bottom-right">
+        <a class="btn btn-success" id="btnQuickDispatchPallets">Quick Dispatch</a>
         <a class="btn btn-success" id="btnDispatchPallets" style="display:none">Dispatch Selected Pallets</a>
         @Html.ActionLink("Back to List", "Index", "SalesOrders", new { @class = "btn btn-primary" })
     </div>
@@ -82,8 +85,7 @@
             Gane.Pallets.UpdatePalletGenerator();
         }
     });
-    function processDispatch()
-    {
+    function processDispatch() {
         if (UploadControl.GetSelectedFiles() == null || UploadControl.GetSelectedFiles().length < 1) {
             $("#frmDispatchPallets").submit();
         }
