--- a/WMS/Views/Theme/Modern/SalesOrders/Create.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/Create.cshtml
@@ -133,7 +133,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.AccountContactId, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.DropDownListFor(m => m.AccountContactId, ViewBag.AccountContacts as IEnumerable<SelectListItem>, new { @class = "chosen-select", onchange= "AccountContactChange();" })
+                    @Html.DropDownListFor(m => m.AccountContactId, ViewBag.AccountContacts as IEnumerable<SelectListItem>, new { @class = "chosen-select", onchange = "AccountContactChange();" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -195,9 +195,9 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.Label("Consignment Type", htmlAttributes: new { @class = "col-md-4" })
+                @Html.Label("Delivery Method", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.DropDownList("ConsignmentTypeId", ViewBag.ConsignmentTypes as SelectList, "Select", new { @class = "chosen-select" })
+                    @Html.DropDownList("DeliveryMethod", EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select", new { @class = "chosen-select" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
