--- a/WMS/Views/Theme/Modern/SalesOrders/Edit.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/Edit.cshtml
@@ -198,9 +198,9 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.Label("Consignment Type", htmlAttributes: new { @class = "col-md-4" })
+                @Html.Label("Delivery Method", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.DropDownList("ConsignmentTypeId", ViewBag.ConsignmentTypes as SelectList, "Select", new { @class = "chosen-select" })
+                    @Html.DropDownList("DeliveryMethod", EnumHelper.GetSelectList(typeof(DeliveryMethods), Model.DeliveryMethod), "Select", new { @class = "chosen-select" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
