--- a/WMS/Views/Theme/Modern/SalesOrders/ProcessOrder.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/ProcessOrder.cshtml
@@ -79,9 +79,9 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(m => m.ConsignmentTypeId, htmlAttributes: new { @class = "col-md-4" })
+            @Html.LabelFor(m => m.DeliveryMethod, htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
-                @Html.DropDownListFor(m => m.ConsignmentTypeId, ViewBag.Consignments as SelectList, "Select Consignment Type", new { @class = "chosen-select form-control" })
+                @Html.DropDownListFor(m => m.DeliveryMethod, EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select Delivery Method", new { @class = "chosen-select form-control" })
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
