--- a/WMS/Views/Theme/Default/Shared/_ProductAccount.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_ProductAccount.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Ganedata.Core.Entities.Domain.ProductAccountCodes
 @using Ganedata.Core.Entities.Enums
+
 <hgroup>
     <h2><span>Product Account</span></h2>
     <h3><span>@Html.ValidationSummary("", new { @id = "vldPrAccountCode" })</span></h3>
@@ -7,37 +8,44 @@
 @using (Html.BeginForm("SaveProductAccount", "Products", FormMethod.Post, new { @id = "frmproductaccountcode" }))
 {
     @Html.HiddenFor(m => m.ProdAccCodeID)
-<div class="col-md-12 pull-left">
-    <div class="input-group h-100 justify-content-center align-items-center">
-        <label class="col-md-4">Account</label>
-        <div class="col-md-8">
-            @Html.DropDownListFor(m => m.AccountID, new SelectList(ViewBag.Accounts, "accountid", "account"), new { @id = "productaccounts", @class = "chosen-select" })
+    <div class="col-md-12 pull-left">
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Account</label>
+            <div class="col-md-8">
+                @Html.DropDownListFor(m => m.AccountID, new SelectList(ViewBag.Accounts, "accountid", "account"), new { @id = "productaccounts", @class = "chosen-select" })
+            </div>
         </div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        <label class="col-md-4">Account Code<span style="color:red"> *</span></label>
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.ProdAccCode)
-            @Html.ValidationMessageFor(model => model.ProdAccCode)
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Account Code<span style="color:red"> *</span></label>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.ProdAccCode)
+                @Html.ValidationMessageFor(model => model.ProdAccCode)
+            </div>
         </div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        <label class="col-md-4">Product Delivery Type</label>
-        <div class="col-md-8">
-            @Html.DropDownListFor(m => m.ProdDeliveryType, EnumHelper.GetSelectList(typeof(ProductDeliveryTypeEnum)), "Select Delivery Type", new { @class = "chosen-select" })
-            @Html.ValidationMessageFor(model => model.ProdDeliveryType)
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Rebate %</label>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.RebatePercentage)
+                @Html.ValidationMessageFor(model => model.RebatePercentage)
+            </div>
         </div>
-    </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Product Delivery Type</label>
+            <div class="col-md-8">
+                @Html.DropDownListFor(m => m.ProdDeliveryType, EnumHelper.GetSelectList(typeof(ProductDeliveryTypeEnum)), "Select Delivery Type", new { @class = "chosen-select" })
+                @Html.ValidationMessageFor(model => model.ProdDeliveryType)
+            </div>
+        </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        <label class="col-md-4">Ordering Notes</label>
-        
-        <div class="col-md-8">
-            @Html.TextAreaFor(m => m.ProdOrderingNotes, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.ProdOrderingNotes)
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Ordering Notes</label>
+
+            <div class="col-md-8">
+                @Html.TextAreaFor(m => m.ProdOrderingNotes, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ProdOrderingNotes)
+            </div>
         </div>
     </div>
-</div>
 
     if (!Request.Url.AbsolutePath.ToLower().Contains("saveproductaccount"))
     {
