--- a/WMS/Views/Theme/Default/SalesOrders/BatchPickersAssignment.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/BatchPickersAssignment.cshtml
@@ -82,14 +82,14 @@
     <div class="input-group col-lg-6 col-md-12 justify-content-start align-items-start">
         @Html.Label("Selected Picker:", htmlAttributes: new { @class = "col-md-3 pt-2" })
         <div class="col-md-9">
-            @Html.DropDownList("SelectedPicker", ViewBag.Pickers as SelectList, "All Picker", new { @class = "chosen-select form-control", onchange = "refreshGrids();" })
+            @Html.DropDownList("SelectedPicker", ViewBag.Pickers as SelectList, "Select Picker", new { @class = "chosen-select form-control", onchange = "refreshGrids();" })
         </div>
     </div>
 </div>
 
 <div id="tabs" style="visibility: hidden">
     <ul>
-        <li><a href="#SOA">Orders</a></li>
+        <li><a href="#SOA">Unassigned Orders</a></li>
         <li><a href="#SOC">Assigned Orders</a></li>
     </ul>
 
@@ -112,6 +112,7 @@
         @Html.Action("_SalesOrders", "Order", new { pickerId = ViewBag.PickerId, type = 3 })
         <div class="col-md-offset-2 col-md-10 bottom-right">
             <a type="button" class="btn btn-primary" href="javascript:unassignOrders()"><b class="fa fa-chain-broken"></b>UnAssign Orders</a>
+            <a type="button" class="btn btn-primary" href="javascript:assigneOrders()"><b class="fa fa-chain"></b>Re-Assign Orders</a>
             <a type="button" class="btn btn-primary" href="~/Reports/PickersOrdersReport"><b class="fa fa-chain"></b>Print Assigned Orders</a>
         </div>
     </div>
